[project]
name = "color-utils"
version = "1.0.0"
description = "gradwork color utils"
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "mypy>=1.1.1",
    "ruff>=0.0.260",
]

[tool.pdm.scripts]
lint = {composite = ["black color_utils", "ruff --fix color_utils", "mypy --strict color_utils"]}

[tool.black]
line-length = 100
quiet = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
