[project]
name = "color-utils"
version = "1.0.1"
description = "gradwork color utils"
authors = [{name = "Sergey Pavlov", email = "self@sergeypavlov.dev"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.1.1",
    "ruff>=0.0.260",
]

[tool.pdm.scripts]
lint = {composite = ["black color_utils", "isort color_utils", "ruff --fix color_utils", "mypy --strict color_utils"]}

[tool.black]
line-length = 100
quiet = true

[tool.isort]
quiet = true
line_length = 100
multi_line_output = 3
profile = "black"

[tool.ruff]
fix = true
line-length = 100
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
